[metadata]
name = 'tfm'
version = '0.3.0'
description = ''
author = 'Daniel Gomez'
author_email = 'd.gomez@donders.ru.nl'
license = 'MIT/Apache-2.0'
url = 'https://github.com/dangom/tfm'

[requires]
python_version = ['3.6', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
